<resources>
    <string name="app_name">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="list_item_theme">Темная тема</string>
    <string name="list_item_share">Поделиться приложением</string>
    <string name="list_item_support">Написать в техподдержку</string>
    <string name="list_item_license">Пользовательское соглашение</string>
    <string name="media_text">Медиатека</string>
    <string name="search_text">Поиск</string>
    <string name="support_share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">kalemenev@gmail.com</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_user_agreement_url">https://yandex.ru/legal/practicum_offer</string>
    <string name="track_time_separator"> • </string>
    <string name="found_nothing">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_connection">Обновить</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="search_history_header">Вы искали</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="track_start_time">00:00</string>
    <string name="share_link_text">Share link</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="media_is_empty">Ваша медиатека пуста</string>
</resources>