<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainLinLayoutStyle">

    <TextView
        style ="@style/MainTextViewStyle"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:showDividers="middle"
        android:divider="@drawable/main_empty_tall_div"
        android:orientation="vertical">

        <Button
            style="@style/MainButtonStyle"
            android:id="@+id/main_butt_search"
            android:text="@string/button_search"
            app:icon="@drawable/search_light" />

        <Button
            style="@style/MainButtonStyle"
            android:id="@+id/main_butt_media"
            android:text="@string/button_media"
            app:icon="@drawable/media_light"/>

        <Button
            style="@style/MainButtonStyle"
            android:id="@+id/main_butt_settings"
            android:text="@string/button_settings"
            app:icon="@drawable/settings_light" />
    </LinearLayout>
</LinearLayout>